fixed card title & description overflow

--- a/src/app/modules/products/products.component.css
+++ b/src/app/modules/products/products.component.css
@@ -47,6 +47,9 @@
   color: #344054;
   margin-top: 15px;
   margin-bottom: 8px;
+  text-overflow: ellipsis;
+  overflow: hidden; 
+  white-space: nowrap;
 }
 
 .cardText1 {
@@ -88,7 +91,11 @@
 }
 
 .cardDescription {
+  text-overflow: ellipsis;
+  overflow: hidden; 
+  white-space: nowrap;
   width: 239px;
+  height: 24px;
 }
 
 .cardContainer {
